# azadi-sdk

./: .Makefile.swp  .clang-format  .gitignore  .piopm  CMakeLists.txt  Makefile  README.md  package.json  prog.hex  program.hex  program.hex~Stashed changes  wal44e
azadi/: CMakeLists.txt  link.ld  link.ld.b  start.S  startup.c  trap.c
bsp/: platform.h
bsp/azadi/: trap.c  trap_entry.S
bsp/core/: README.md  init.c  link.ld  start.S  timerh.S  trap.S  trap.c  trap_entry.S  traps.c
bsp/drivers/: README.md
bsp/drivers/gpio/: gpio.c
bsp/drivers/i2c/: i2c.c
bsp/drivers/plic/: plic.c
bsp/drivers/pwm/: pwm.c  pwm.h
bsp/drivers/sa/: uart.c
bsp/drivers/spi/: isr_spi_rx.c  isr_spi_tx.c  spi.c  spi.h
bsp/drivers/timer/: Tx_Empty_Isr.c  timer.c  timer.h
bsp/drivers/uart/: uart.c  uart.h
bsp/include/: README.md  gpio.h  i2c.h  platform.h  plic-regs.h  plic.h  pwm.h  spi.h  timer.h  trap.h  uart-regs.h  uart-sa.h  uart.h  utils.h
bsp/include/gpio/: dif_gpio.c  dif_gpio.h
bsp/include/uart/: dif_uart.c  dif_uart.h
bsp/lib/: mmio.c  mmio.h  utils.c  utils.h
bsp/libs/: mmio.h  utils.c  utils.h
bsp/src/: CMakeLists.txt  isr_spi_tx.c  plic.c  spi.c
bsp/util/: serial.sh  tx.sh  uploader.py
bsp/util/uploader/: uploader.c
include/: gpio.h  i2c.h  platform.h  plic.h  pwm.h  tic.h  timer.h  trap.h  uart.h
softwares/float_mul/: Makefile
softwares/float_sub/: Makefile
softwares/gpio_test/: CMakeLists.txt  Makefile  gpio_test.c
softwares/hello/: Makefile  hello.c
softwares/hello/output/: hello.dump  hello.hex  hello.mem  hello.merl
softwares/plic_test/: Makefile  main.cpp  plic_test.c
softwares/plic_test/output/: plic_test.dump  plic_test.merl
softwares/sa_test/: Makefile  sa_test.c
softwares/spi_test/: Makefile  spi_test.c
softwares/tflm_hello/: main_functions.cc  main_functions.h  tflm_hello.cc
softwares/uart_test/: uart_test.c
src/: CMakeLists.txt  gpio.c  tic.c  timer.c  uart.c
test/: Makefile  gpio.c  hello.c  hello.dump  platform.h
test/output/: hello.dump  hello.merl  program.hex
tools/: TC-riscv.cmake  TC-riscv32.cmake  azadi.repl
tools/scripts/: serial.sh  uploader.py
tools/scripts/uploader/: uploader.c
